<resources>
    <string name="app_name">JaSoali</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back4app_app_id">08C9DnUwxaoQSQZzuZqBrZN18Y40lDzA9TDLMLav</string>
    <string name="back4app_client_key">ZaEOM7fAwNsz3Rm3aHmoTzk8pz2YLQHhuSvsgGV3</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_searching">جستجو</string>

    <string name="term">سال تحصیلی</string>
    <string name="course">درس</string>
    <string name="professor">استاد</string>
    <string name="departemant">دانشکده</string>
    <string name="university">دانشگاه</string>

    <string name="title">عنوان</string>
    <string name="description">توضیحات</string>
    <string name="question_text">متن سوال</string>
    <string name="select_file">انتخاب فایل</string>
    <string name="upload">بارگذاری</string>
    <string name="file_question">سوال فایلی</string>
    <string name="text_question">سوال متنی</string>
    <string name="comment">نظر</string>
    <string name="submit_comment">ثبت نظر</string>
    <string name="edit">ویرایش</string>
    <string name="text_is_empty">متن سوال خالی است</string>
    <string name="title_is_empty">لطفا عنوان را پر کنید</string>
    <string name="file_is_null">لطفا یک فایل انتخاب کنید</string>

    <string name="dark_mode_preferences">dark_mode_preferences</string>

    <string name="name">نام</string>
    <string name="change_user">تغییر نام</string>
    <string name="logout">خروج</string>
    <string name="submit_changes">ثبت تغییر</string>
    <string name="admin_request">درخواست مدیریت</string>
    <string name="add_question">اضافه کردن سوال</string>
    <string name="admin_request_done">ثبت شد</string>
    <string name="title_profile">حساب کاربری</string>
    <string name="title_search">جست‌وجو</string>
    <string name="title_favorites">نشان‌شده‌ها</string>
    <string name="added_to_favs">به لیست علاقه مندی‌ها اضافه شد.</string>
    <string name="repeat_password">تکرار رمز عبور</string>
    <string name="username">نام کاربری</string>
    <string name="register">ثبت‌نام</string>
    <string name="fullname">نام و نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="login">ورود</string>


</resources>